--- a/ChronosClient/project.json
+++ b/ChronosClient/project.json
@@ -1,6 +1,9 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0"
+    "Flurl.Http": "1.1.1",
+    "Microsoft.Net.Http": "2.2.29",
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
+    "Newtonsoft.Json": "9.0.1"
   },
   "frameworks": {
     "uap10.0": {}
