Start recipient's public key management

--- a/ChronosClient/ChronosClient.csproj
+++ b/ChronosClient/ChronosClient.csproj
@@ -102,6 +102,9 @@
     <Compile Include="Views\AsymmetricKeys.xaml.cs">
       <DependentUpon>AsymmetricKeys.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\ImportRecipientsPublicKey.xaml.cs">
+      <DependentUpon>ImportRecipientsPublicKey.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\ListUsers.xaml.cs">
       <DependentUpon>ListUsers.xaml</DependentUpon>
     </Compile>
@@ -138,6 +141,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\AsymmetricKeys.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ImportRecipientsPublicKey.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
